apps/media/lidarr/deployment.yaml
#
# Reference:
# https://github.com/Lidarr/Lidarr
# https://docs.linuxserver.io/images/docker-lidarr/
#

apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: media
  labels:
    app.kubernetes.io/component: service
    app.kubernetes.io/name: lidarr
spec:
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: lidarr
  type: ClusterIP
  ports:
    - name: http
      port: 8686
      protocol: TCP
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: media
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: lidarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: app
      app.kubernetes.io/name: lidarr
  template:
    metadata:
      labels:
        app.kubernetes.io/component: app
        app.kubernetes.io/name: lidarr
    spec:
      restartPolicy: Always
      affinity:
      nodeAffinity:
        requiredDuringSchedulingIgnoredDuringExecution:
          nodeSelectorTerms:
            - matchExpressions:
                - key: kubernetes.io/hostname
                  operator: In
                  values:
                    - minas-tirith
                    - minas-tirith-vm
      containers:
        - name: lidarr
          image: lscr.io/linuxserver/lidarr:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8686
              protocol: TCP
          volumeMounts:
            - name: lidarr-pvc
              mountPath: /config
            - name: deluge-pvc
              mountPath: /data
              subPath: data
            - name: media-data-pvc
              mountPath: /music
              subPath: music
      volumes:
        - name: lidarr-pvc
          persistentVolumeClaim:
            claimName: lidarr-pvc
        - name: deluge-pvc
          persistentVolumeClaim:
            claimName: deluge-pvc
        - name: media-data-pvc
          persistentVolumeClaim:
            claimName: media-data-pvc
