apps/media/lidarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lidarr-dashboard-https
  namespace: media
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: lidarr
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`lidarr.saldivar.io`)
      middlewares:
        - name: security
          namespace: kube-system
      services:
        - name: lidarr
          port: http
